<resources>
    <string name="app_name">test</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
        <string-array name="planets_array">
            <item>Mercury</item>
            <item>Venus</item>
            <item>Earth</item>
            <item>Mars</item>
            <item>Jupiter</item>
            <item>Saturn</item>
            <item>Uranus</item>
            <item>Neptune</item>
        </string-array>
    <string name="donate_string">Donate</string>
    <string name="recieve_string">Receive</string>
    <string name="search">Search</string>

    <string name="a_positive">A+</string>
    <string name="a_negative">A-</string>
    <string name="b_positive">B+</string>
    <string name="b_negative">B-</string>
    <string name="ab_positive">AB+</string>
    <string name="ab_negative">AB-</string>
    <string name="o_positive">O+</string>
    <string name="o_negative">O-</string>
</resources>